--- a/styles.css
+++ b/styles.css
@@ -642,7 +642,7 @@ input[id^="slider1-img-3"]:checked~.nav-dots label[for="slider1-img-3"] {
 input[id^="slider2-img-1"]:checked~.nav-dots label[for="slider2-img-1"],
 input[id^="slider2-img-2"]:checked~.nav-dots label[for="slider2-img-2"],
 input[id^="slider2-img-3"]:checked~.nav-dots label[for="slider2-img-3"] {
-    background: var(--text-grey-light);
+    background: var(--text-grey-dark);
 }
 
 /* below slider */
@@ -676,3 +676,101 @@ input[id^="slider2-img-3"]:checked~.nav-dots label[for="slider2-img-3"] {
 .room-details .btn {
     border: 1px solid var(--text-grey-dark);
 }
+
+/* CONTACT US STYLES */
+/* CONTACT US STYLES */
+
+
+.margin-down {
+    margin-bottom: -10px;
+}
+
+.contact-heading {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    background-color: var(--text-grey-light);
+    color: var(--text-grey-dark);
+}
+
+.contact-container h1 {
+    margin-top: 80px;
+    font-size: 30px;
+    color: var(--text-grey-dark);
+    padding-bottom: 20px;
+}
+
+.contact-container p {
+    margin: 0;
+    max-width: 700px;
+    color: var(--text-grey-dark);
+    text-align: center;
+}
+
+.contact-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    padding: var(--spacing-md);
+
+}
+
+/* Flexbox Contact Section */
+.container-flex-contact {
+    max-width: 700px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    gap: 20px;
+    margin: 20px auto;
+}
+
+
+/* Contact Details */
+.container-flex-left {
+    flex: 1;
+    min-width: 250px;
+}
+
+/* Form Styling */
+form {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    width: 100%;
+    max-width: 400px;
+}
+
+input,
+textarea {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid var(--text-grey-dark);
+    border-radius: 5px;
+    font-size: 16px;
+}
+
+textarea {
+    resize: vertical;
+}
+
+button {
+    background-color: var(--text-grey-dark);
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+    font-size: 16px;
+}
+
+button:hover {
+    background-color: var(--text-grey-light);
+}
+
+/* MEDIA QUERIES FOR INDEX.HTML */
